package com.github.studeasy.logic.facades;

public class FacadeFeedback {
}
